pages/docs/manual/v8.0.0/function.mdx
---
title: "Function"
description: "Function syntax in ReScript"
canonical: "/docs/manual/latest/function"
---

# Function

_Cheat sheet for the full function syntax at the end_.

ReScript functions are declared with an arrow and return an expression, just like JS functions. They compile to clean JS functions too.

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let greet = (name) => "Hello " ++ name;
```

```ml
let greet name = "Hello " ^ name
```

```js
function greet(name) {
  return "Hello " + name;
}
```

</CodeTab>

This declares a function and assigns to it the name `greet`, which you can call like so:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
greet("world!"); // "Hello world!"
```

```ml
greet "world!" (* "Hello world!" *)
```

```js
greet("world!");
```

</CodeTab>

Multi-arguments functions have arguments separated by comma:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let add = (x, y, z) => x + y + z;
add(1, 2, 3); // 6
```

```ml
let add x y z = (x + y) + z
let () = add 1 2 3
```

```js
function add(x, y, z) {
  return (((x + y) | 0) + z) | 0;
}
```

</CodeTab>

For longer functions, you'd surround the body with a block:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let greetMore = (name) => {
  let part1 = "Hello";
  part1 ++ " " ++ name;
};
```

```ml
let greetMore name =
  let part1 = "Hello" in
  part1 ^ " " ^ name
```

```js
function greetMore(name) {
  return "Hello " + name;
}
```

</CodeTab>

If your function has no argument, just write `let greetMore = () => {...}`.

## Labeled Arguments

Multi-arguments functions, especially those whose arguments are of the same type, can be confusing to call.

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let addCoordinates = (x, y) => {
  // use x and y here
};
// ...
addCoordinates(5, 6); // which is x, which is y?
```

```ml
let addCoordinates x t =
  (* use x and y here *)
(* ... *)
addCoordinates 5 6 (* which is x, which is y? *)
```

```js
function addCoordinates(x, y) {
  // use x and y here
}

addCoordinates(5, 6);
```

</CodeTab>

You can attach labels to an argument by prefixing the name with the `~` symbol:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let addCoordinates = (~x, ~y) => {
  // use x and y here
};
// ...
addCoordinates(~x=5, ~y=6);
```

```ml
let addCoordinates ~x ~y =
  (* use x and y here *)
(* ... *)
addCoordinates ~x=5 ~y=6
```

```js
function addCoordinates(x, y) {
  // use x and y here
}

addCoordinates(5, 6);
```

</CodeTab>

You can provide the arguments in **any order**:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
addCoordinates(~y=6, ~x=5);
```

```ml
addCoordinates ~y=6 ~x=5
```

```js
addCoordinates(5, 6);
```

</CodeTab>

The `~x` part in the declaration means the function accepts an argument labeled `x` and can refer to it in the function body by the same name. You can also refer to the arguments inside the function body by a different name for conciseness:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let drawCircle = (~radius as r, ~color as c) => {
  setColor(c);
  startAt(r, r);
  // ...
};

drawCircle(~radius=10, ~color="red");
```

```ml
let drawCircle ~radius:r ~color:c =
  setColor c;
  startAt r r;
  (* ... *)

let () = drawCircle ~radius:10 ~color:"red"
```

```js
function drawCircle(r, c) {
  setColor(c);
  return startAt(r, r);
}

drawCircle(10, "red");
```

</CodeTab>

As a matter of fact, `(~radius)` is just a shorthand for `(~radius as radius)`.

Here's the syntax for typing the arguments:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let drawCircle = (~radius as r: int, ~color as c: string) => {
  // code here
};
```

```ml
let drawCircle ~radius:(r : int) ~color:(c : string) =
  (* code *)
```

```js
function drawCircle(r, c) {
  // code here
}
```

</CodeTab>

## Optional Labeled Arguments

Labeled function arguments can be made optional during declaration. You can then omit them when calling the function.

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
// radius can be omitted
let drawCircle = (~color, ~radius=?, ()) => {
  setColor(color);
  switch (radius) {
  | None => startAt(1, 1)
  | Some(r_) => startAt(r_, r_)
  };
};
```

```ml
(* radius can be omitted *)
let drawCircle ~color ?radius () =
  setColor color;
  let () = match radius with
  | None -> startAt 1 1
  | Some r_ -> startAt r_ r_
```

```js
var Caml_option = require("./stdlib/caml_option.js");

function drawCircle(color, radius, param) {
  setColor(color);
  if (radius === undefined) {
    return startAt(1, 1);
  }
  var r_ = Caml_option.valFromOption(radius);
  return startAt(r_, r_);
}
```

</CodeTab>

When given in this syntax, `radius` is **wrapped** in the standard library's `option` type, defaulting to `None`. If provided, it'll be wrapped with a `Some`. So `radius`'s type value is `None | Some(int)` here.

More on `option` type [here](null-undefined-option.md).

**Note** for the sake of the type system, whenever you have an optional argument, you need to ensure that there's also at least one positional argument (aka non-labeled, non-optional argument) after it. If there's none, provide a dummy `unit` (aka `()`) argument.

### Signatures and Type Annotations

Functions with optional labeled arguments can be confusing when it comes to signature and type annotations. Indeed, the type of an optional labeled argument looks different depending on whether you're calling the function, or working inside the function body. Outside the function, a raw value is either passed in (`int`, for example), or left off entirely. Inside the function, the parameter is always there, but its value is an option (`option(int)`). This means that the type signature is different, depending on whether you're writing out the function type, or the parameter type annotation. The first being a raw value, and the second being an option.

If we get back to our previous example and both add a signature and type annotations to its argument, we get this:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let drawCircle: (~color: color, ~radius: int=?, unit) => unit =
  (~color: color, ~radius: option(int)=?, ()) => {
    setColor(color);
    switch (radius) {
    | None => startAt(1, 1)
    | Some(r_) => startAt(r_, r_)
    };
  };
```

```ml
let drawCircle: color:color -> ?radius:int -> unit -> unit =
  fun ~color:(color : color) ?radius:(radius : int option) () ->
    setColor color;
    let () = match radius with
    | None -> startAt 1 1
    | Some r_ -> startAt r_ r_
```

```js
function drawCircle(color, radius, param) {
  setColor(color);
  if (radius !== undefined) {
    return startAt(radius, radius);
  } else {
    return startAt(1, 1);
  }
}
```

</CodeTab>

The first line is the function's signature, we would define it like that in an interface file (see [Signatures](module.md#signatures)). The function's signature describes the types that the **outside world** interacts with, hence the type `int` for `radius` because it indeed expects an `int` when called.

In the second line, we annotate the arguments to help us remember the types of the arguments when we use them **inside** the function's body, here indeed `radius` will be an `option(int)` inside the function.

So if you happen to struggle when writing the signature of a function with optional labeled arguments, try to remember this!

### Explicitly Passed Optional

Sometimes, you might want to forward a value to a function without knowing whether the value is `None` or `Some(a)`. Naively, you'd do:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let result =
  switch (payloadRadius) {
  | None => drawCircle(~color, ())
  | Some(r) => drawCircle(~color, ~radius=r, ())
  };
```

```ml
let result =
  match payloadRadius with
  | None -> drawCircle ~color ()
  | Some r -> drawCircle ~color ~radius:r ()
```

```js
var r = payloadRadius;

var result =
  r !== undefined
    ? drawCircle(color, Caml_option.valFromOption(r), undefined)
    : drawCircle(color, undefined);
```

</CodeTab>

This quickly gets tedious. We provide a shortcut:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let result = drawCircle(~color, ~radius=?payloadRadius, ());
```

```ml
let result = drawCircle ~color ?radius:payloadRadius ()
```

```js
var result = drawCircle(1, undefined, undefined);
```

</CodeTab>

This means "I understand `radius` is optional, and that when I pass it a value it needs to be an `int`, but I don't know whether the value I'm passing is `None` or `Some(val)`, so I'll pass you the whole `option` wrapper".

### Optional with Default Value

Optional labeled arguments can also be provided a default value. In this case, they aren't wrapped in an `option` type.

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let drawCircle = (~radius=1, ~color, ()) => {
  setColor(color);
  startAt(radius, radius);
};
```

```ml
let drawCircle ?(radius=1) ~color () =
  setColor color;
  startAt radius radius
```

```js
function drawCircle(radiusOpt, color, param) {
  var radius = radiusOpt !== undefined ? radiusOpt : 1;
  setColor(color);
  return startAt(radius, radius);
}
```

</CodeTab>

## Recursive Functions

ReScript chooses the sane default of preventing a function to be called recursively within itself. To make a function recursive, add the `rec` keyword after the `let`:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let rec neverTerminate = () => neverTerminate()
```

```ml
let rec neverTerminate () = neverTerminate ()
```

```js
function neverTerminate(_param) {
  while (true) {
    _param = undefined;
    continue;
  }
}
```

</CodeTab>

A simple recursive function may look like this:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
// Recursively check every item on the list until one equals the `item`
// argument. If a match is found, return `true`, otherwise return `false`
let rec listHas = (list, item) =>
  switch (list) {
  | [] => false
  | [a, ...rest] => a === item || listHas(rest, item)
  };
```

```ml
(* Recursively check every item on the list until one equals the `item` *)
(* argument. If a match is found, return `true`, otherwise return `false` *)

let rec listHas list item =
  match list with
  | [] -> false
  | a::rest -> (a == item) || (listHas rest item)
```

```js
function listHas(_list, item) {
  while (true) {
    var list = _list;
    if (!list) {
      return false;
    }
    if (list.hd === item) {
      return true;
    }
    _list = list.tl;
    continue;
  }
}
```

</CodeTab>

Recursively calling a function is bad for performance and the call stack. However, ReScript intelligently compiles [tail recursion](https://stackoverflow.com/questions/33923/what-is-tail-recursion) into a fast JavaScript loop. Try checking the JS output of the above code!

### Mutually Recursive Functions

Mutually recursive functions start like a single recursive function using the
`rec` keyword, and then are chained together with `and`:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let rec callSecond = () => callFirst()
and callFirst = () => callSecond();
```

```ml
let rec callSecond () = callFirst ()
and callFirst () = callSecond ()
```

```js
function callSecond(_param) {
  while (true) {
    _param = undefined;
    continue;
  }
}

function callFirst(_param) {
  while (true) {
    _param = undefined;
    continue;
  }
}
```

</CodeTab>

## Uncurried Function

ReScript's functions are curried by default, which is one of the few performance penalties we pay in the compiled JS output. The compiler does a best-effort job at removing those currying whenever possible. However, in certain edge cases, you might want guaranteed uncurrying. In those cases, put a dot in the function's parameter list:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let add = (. x, y) => x + y;

add(. 1, 2);
```

```ml
let add = (fun x y -> x + y) [@bs]
let () = add 1 2 [@bs]
```

```js
function add(x, y) {
  return (x + y) | 0;
}

add(1, 2);
```

</CodeTab>

If you write down the uncurried function's type, you'll add a dot there as well.

**Note**: both the declaration site and the call site need to have the uncurry annotation. That's part of the guarantee/requirement.

**This feature seems trivial**, but is actually one of our most important features, as a primarily functional language. We encourage you to use it if you'd like to remove any mention of `Curry` runtime in the JS output.

## Tips & Tricks

Cheat sheet for the function syntaxes:

### Declaration

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)"]}>

```re
// anonymous function
(x, y) => 1;
// bind to a name
let add = (x, y) => 1;

// labeled
let add = (~first as x, ~second as y) => x + y;
// with punning sugar
let add = (~first, ~second) => first + second;

// labeled with default value
let add = (~first as x=1, ~second as y=2) => x + y;
// with punning
let add = (~first=1, ~second=2) => first + second;

// optional
let add = (~first as x=?, ~second as y=?) => switch (x) {...};
// with punning
let add = (~first=?, ~second=?) => switch (first) {...};
```

```ml
(* anonymous function *)
fun x y -> 1
(* bind to a name *)
let add x y = 1

(* labeled *)
let add ~first:x ~second:y = x + y
(* with punning sugar *)
let add ~first ~second = first + second

(* labeled with default value *)
let add ?first:(x=1) ?second:(y=2) = x + y
(* with punning *)
let add ?(first=1) ?(second=2) = first + second

(* optional *)
let add ?first:x ?second:y = match x with ...
(* with punning *)
let add ?first ?second = match x with ...
```

</CodeTab>

#### With Type Annotation

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)"]}>

```re
// anonymous function
(x: int, y: int): int => 1;
// bind to a name
let add = (x: int, y: int): int => 1;

// labeled
let add = (~first as x: int, ~second as y: int) : int => x + y;
// with punning sugar
let add = (~first: int, ~second: int) : int => first + second;

// labeled with default value
let add = (~first as x: int=1, ~second as y: int=2) : int => x + y;
// with punning sugar
let add = (~first: int=1, ~second: int=2) : int => first + second;

// optional
let add = (~first as x: option(int)=?, ~second as y: option(int)=?) : int => switch (x) {...};
// with punning sugar
// note that the caller would pass an `int`, not `option(int)`
// Inside the function, `first` and `second` are `option(int)`.
let add = (~first: option(int)=?, ~second: option(int)=?) : int => switch (first) {...};
```

```ml
(* anonymous function *)
fun (x: int) (y: int) : int -> 1
(* bind to a name *)
let add (x: int) (y: int) : int = 1

(* labeled *)
let add ~first:(x: int) ~second:(y: int) : int = x + y
(* no punning sugar *)

(* labeled with default value *)
let add ?first:((x: int)=1) ?second:((y: int)=2) : int = x + y
(* no punning sugar *)
(* optional *)
let add ?first:(x: int option) ?second:(y: int option) : int = match x with ...
(* no punning sugar *)
```

</CodeTab>

### Application

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)"]}>

```re
add(x, y);

// labeled
add(~first=1, ~second=2);
// with punning sugar
add(~first, ~second);

// application with default value. Same as normal application
add(~first=1, ~second=2);

// explicit optional application
add(~first=?Some(1), ~second=?Some(2));
// with punning
add(~first?, ~second?);
```

```ml
add x y

(* labeled *)
add ~first:1 ~second:2
(* with punning sugar *)
add ~first ~second

(* application with default value. Same as normal application *)
add ~first:1 ~second:2

(* explicit optional application *)
add ?first:(Some 1) ?second:(Some 2)
(* with punning *)
add ?first ?second
```

</CodeTab>

#### With Type Annotation

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)"]}>

```re
// labeled
add(~first=1: int, ~second=2: int);
// with punning sugar
add(~first: int, ~second: int);

// application with default value. Same as normal application
add(~first=1: int, ~second=2: int);

// explicit optional application
add(~first=?Some(1): option(int), ~second=?Some(2): option(int));
// no punning sugar when you want to type annotate
```

```ml
(* labeled *)
add ~first:(1: int) ~second:(2: int)
(* no punning sugar *)

(* application with default value. Same as normal application *)
add ~first:(1: int) ~second:(2: int)

(* explicit optional application *)
add ?first:(Some 1: int option) ?second:(Some 2: int option)
(* no punning sugar when you want to type annotate *)
```

</CodeTab>

### Standalone Type Signature

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)"]}>

```re
// first arg type, second arg type, return type
type add = (int, int) => int;

// labeled
type add = (~first: int, ~second: int) => int;

// labeled
type add = (~first: int=?, ~second: int=?, unit) => int;
```

```ml
(* first arg type, second arg type, return type *)
type add = int -> int -> int

(* labeled *)
type add = first:int -> second:int -> int

(* labeled *)
type add = ?first:int -> ?second:int -> unit -> int
```

</CodeTab>

#### In Interface Files

To annotate a function from the implementation file (`.re`) in your interface file (`.rei`):

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)"]}>

```re
let add: (int, int) => int;
```

```ml
val add: int -> int -> int
```

</CodeTab>

The type annotation part is the same as the previous section on With Type Annotation.

**Don't** confuse `let add: myType` with `type add = myType`. When used in `.rei` interface files, the former exports the binding `add` while annotating it as type `myType`. The latter exports the type `add`, whose value is the type `myType`.
